--- a/roku_client/views/layout.hbs
+++ b/roku_client/views/layout.hbs
@@ -8,9 +8,25 @@
     <title>Roku Streaming Service</title>
 </head>
 <body>
-    <main id="app">
+    <div class="wrapper">
+        <main id="app">
+            <header id="mainHeader">
+                <img src="images/Roku-Logo.png" alt="Roku Logo">
+            </header>
+            
         {{{ body }}}
-    </main>
-    <script defer type="module" src="scripts/main.js"></script>
+        </main>
+    </div>
+    <footer id="mainFooter" class="hidden">
+        <ul id="socialMedia">
+            <a href=><img src="images/Facebook.svg" alt="Facebook"></a>
+            <a href=><img src="images/Instagram.svg" alt="Instagram"></a>
+            <a href=><img src="images/Twitter.svg" alt="Twitter"></a>
+        </ul>
+        </div>
+        <div id="copyRight"><p>Roku Flashback ⍟ 2021</p></div>
+    </footer>
 </body>
+
+<script defer type="module" src="scripts/main.js"></script>
 </html>
